Add endpoint that allows access to streaming info (#14)
